<?xml version="1.0" encoding="utf-8"?>
<com.github.wyang.basiclibrary.widget.extend.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:alignContent="stretch"
    app:alignItems="stretch"
    app:dividerDrawable="@drawable/shape_horizontal_line"
    app:flexDirection="row"
    app:flexWrap="wrap"
    app:showDivider="middle">

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_1"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="33.33%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_01"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_2"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="33.33%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_02"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_3"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="33.33%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_03"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_4"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="25%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_04"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_5"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="25%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_05"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_6"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="25%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_06"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_7"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="25%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_07"
        app:iconSizeTop="30dp" />

    <com.github.wyang.basiclibrary.widget.extend.ComplexButton
        android:id="@+id/sb_08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/shape_tab_8"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_flexBasisPercent="25%"
        app:cSelector="standard"
        app:iconTop="@drawable/ic_08"
        app:iconSizeTop="30dp" />
</com.github.wyang.basiclibrary.widget.extend.FlexboxLayout>