<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/shape_horizontal_line"
    android:orientation="vertical"
    android:showDividers="middle|beginning|end">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/shape_title2"
            android:textColor="@color/colorText"
            android:textSize="17sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_vertical_line"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:weightSum="4">

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_1"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_01"
            app:cvSelector="standard"
            app:cvTintIconStart="#000" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_2"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_02"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_3"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_03"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_4"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_04"
            app:cvSelector="standard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_vertical_line"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:weightSum="4">

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_5"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_05"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_6"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_06"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_07"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_7"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_07"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_8"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_08"
            app:cvSelector="standard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_vertical_line"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:weightSum="4">

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_09"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_9"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_09"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_10"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_10"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_11"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_11"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:id="@+id/sb_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/shape_tab_12"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:cvIconSizeTop="30dp"
            app:cvIconTop="@drawable/ic_12"
            app:cvSelector="standard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"
        android:paddingRight="12dp"
        android:paddingBottom="8dp">

        <com.github.android.common.widget.ComplexView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:tag="button"
            android:text="店铺"
            android:textColor="#999"
            android:textSize="13sp"
            app:cvIconPadding="0dp"
            app:cvIconTop="@drawable/ic_shop" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:text="客服"
            android:textColor="#999"
            android:textSize="13sp"
            app:cvIconPadding="0dp"
            app:cvIconTop="@drawable/ic_service" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:text="收藏"
            android:textColor="#999"
            android:textSize="13sp"
            app:cvIconPadding="0dp"
            app:cvIconTop="@drawable/ic_favorites" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:text="加入购物车"
            android:textColor="@android:color/white"
            app:cvCornersBottomLeftRadius="40dp"
            app:cvCornersTopLeftRadius="40dp"
            app:cvNormalBgColor="#F19D39"
            app:cvPressedBgColor="#88F19D39"
            app:cvSelector="standard" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:text="立即购买"
            android:textColor="@android:color/white"
            app:cvCornersBottomRightRadius="40dp"
            app:cvCornersTopRightRadius="40dp"
            app:cvNormalBgColor="#EE762F"
            app:cvPressedBgColor="#88EE762F"
            app:cvSelector="standard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:divider="@drawable/shape_horizontal_line"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">

        <com.github.android.common.widget.ComplexView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/shape_tab_1"
            app:cvGravity="left"
            app:cvIconEnd="@drawable/ic_arrow_right"
            app:cvIconStart="@drawable/ic_01"
            app:cvSelector="ripple" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/shape_tab_2"
            app:cvGravity="left"
            app:cvIconEnd="@drawable/ic_arrow_right"
            app:cvIconStart="@drawable/ic_02"
            app:cvSelector="ripple" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/shape_tab_3"
            app:cvGravity="left"
            app:cvIconEnd="@drawable/ic_arrow_right"
            app:cvIconStart="@drawable/ic_03"
            app:cvSelector="ripple" />

        <com.github.android.common.widget.ComplexView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/shape_tab_4"
            app:cvGravity="left"
            app:cvIconEnd="@drawable/ic_arrow_right"
            app:cvIconStart="@drawable/ic_04"
            app:cvSelector="ripple" />
    </LinearLayout>
</LinearLayout>